classDiagram
    class DB {
        +sqlite3.Connection _conn
        +get_conn() Connection
        +tx() contextmanager
        +init_schema() None
        +apply_migrations() list~int~
        +close() None
    }
    class MigrateCLI {
        +run_migrate() dict
        +check() dict
        +rollback() None
        +backup() Path
        +infer_book_id(stem) str
        +infer_kind(name, content) str
        +infer_genre(name, content) str
    }
    class AssetIndex {
        +int ttl_seconds
        +dict _cache
        +float _cache_ts
        +list_assets(kind, genre, book_id, offset, limit) dict
        +get_asset_detail(kind, asset_id) dict
        +get_overview() Overview
        +count_by_kind() dict
        +invalidate() None
    }
    class StateStore {
        +upsert_task(task) None
        +load_task(book_id) dict
        +save_state(state) None
        +load_state(book_id) dict
    }
    class GuiService {
        +get_overview() Overview
        +list_assets(kind, genre, book_id, offset, limit) dict
        +get_asset_detail(kind, asset_id) dict
        +list_reports() list
        +get_status(book_id) dict
        +get_stats() dict
    }
    class Asset {
        +str asset_key
        +str kind
        +str name
        +str path
        +str book_id
        +str genre
        +int size
        +float mtime
    }
    class Book {
        +str book_id
        +str title
        +str genre
        +str status
    }
    class Report {
        +str report_key
        +str type
        +str book_id
        +str path
        +int char_count
    }
    class AnalysisTask {
        +str book_id
        +str status
        +str cursor
        +dict batch_state
        +int state_revision
    }
    DB ..> MigrateCLI
    GuiService ..> AssetIndex
    GuiService ..> StateStore
    AssetIndex ..> DB
    StateStore ..> DB
    AssetIndex ..> Asset
    GuiService ..> Book
    GuiService ..> Report
    StateStore ..> AnalysisTask
